--- a/FlexMap/FlexMap.vcxproj
+++ b/FlexMap/FlexMap.vcxproj
@@ -21,8 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{7547A9C8-DB8F-43DA-86AA-4780402DB78D}</ProjectGuid>
-    <RootNamespace>Lines</RootNamespace>
+    <RootNamespace>FlexMap</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>FlexMap</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
