--- a/FlexMap/FlexMap.vcxproj
+++ b/FlexMap/FlexMap.vcxproj
@@ -140,6 +140,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Parser.cpp" />
+    <ClCompile Include="Parser.hpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
